@startuml

' --- Estilos ---
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' --- Enums ---
enum StatusProcesso {
    ABERTO
    PENDENTE
    REPROVADO
    CONCLUIDO
    CANCELADO
}

enum StatusContrato {
    PENDENTE
    EM_ANALISE_SECRETARIA
    APROVADO
    REPROVADO
}

enum StatusRelatorio {
    PENDENTE
    EM_ANALISE_COORDENACAO
    APROVADO
    REPROVADO
}

enum Unidade {
    BARRA
    BOTAFOGO
}

enum Periodo {
    PRIMEIRO, SEGUNDO, TERCEIRO, QUARTO, QUINTO, SEXTO, SETIMO, OITAVO, NONO, DECIMO
}

enum TipoUsuario {
    ALUNO
    SECRETARIA
    COORDENACAO
    CARREIRAS
}

enum Veredito {
    APROVADO
    REPROVADO
}

enum DiasDaSemana {
    SEGUNDA
    TERCA
    QUARTA
    QUINTA
    SEXTA
    SABADO
}

enum Turno {
    MANHA
    TARDE
    NOITE
}

' --- Classes Principais ---

abstract class Usuario {
    # matricula : string
    # nome : string
    # email : string
    # senha : string
    # unidade : Unidade
    # precisa_redefinir_senha : bool
}

class Aluno extends Usuario {
    - cpf : string
    - is_ativo : bool
    - periodo : Periodo
    - curso : FK<Curso>
    - grade : M2M<Horarios>
}

class Secretaria extends Usuario {
}

class Coordenador extends Usuario {
}

class Processo {
    - id : int
    - nome_empresa : string
    - data_criacao : Date
    - status : StatusProcesso
    - aluno : FK<Aluno>
    - coordenacao : FK<Coordenador>
    - secretaria : FK<Secretaria>
    - criado_por : string
    + nome_processo() : string
}

class Contrato {
    - id : int
    - arquivo : string
    - data_upload : Date
    - cnpj_empresa : string
    - nome_empresa : string
    - data_inicio : Date
    - data_termino : Date
    - apolice_seguro : string
    - plano_atividade : bool
    - horarios_atividade : M2M<Horarios>
    - assinatura_aluno : bool
    - assinatura_empresa : bool
    - assinatura_faculdade : bool
    - processoId : FK<Processo>
    - status : StatusContrato
    + nome_contrato() : string
}

class Relatorio {
    - id : int
    - processo_id : FK<Processo>
    - arquivo : string
    - data_upload : Date
    - horas_trabalhadas : int
    - data_inicio : Date
    - data_termino : Date
    - status : StatusRelatorio
}

abstract class HistoricoAvaliacao {
    - id : int
    - observacoes : string
    - data_avaliacao : Date
    - veredito : Veredito
}

class HistoricoAvaliacaoRelatorio extends HistoricoAvaliacao {
    - avaliador : FK<Coordenador>
    - relatorio_id : FK<Relatorio>
}

class HistoricoAvaliacaoContrato extends HistoricoAvaliacao {
    - avaliador : FK<Secretaria>
    - contrato_id : FK<Contrato>
    - justificativa : string
}

class Curso {
    - id : int
    - nome : string
    - areaId : FK<Area>
}

class Area {
    - id : int
    - nome : string
    - coordenador : FK<Coordenador>
}

class Horarios {
    - id : int
    - turno : Turno
    - dia : DiasDaSemana
}

' --- Relacionamentos ---

' Um aluno pertence a um curso e período
Aluno "0..*" -- "1" Curso
Aluno "0..*" -- "1" Periodo

' Grade horária do aluno
Aluno "0..*" -- "0..*" Horarios : grade >

' Hierarquia de Curso e Área
Area "1" -- "0..*" Curso
Area "1" -- "1" Coordenador : coordenador >

' Relacionamento de Processo
Aluno "1" -- "0..1" Processo : possui >
Secretaria "1" -- "0..*" Processo : audita >
Coordenador "1" -- "0..*" Processo : valida >

Processo "1" *-- "1..*" Contrato : contém >
Processo "1" *-- "0..*" Relatorio : contém >
Processo "0..*" -- "1" StatusProcesso : possui >

' Horários do contrato
Contrato "0..*" -- "0..*" Horarios : horarios_atividade >

Coordenador "1" -- "0..*" HistoricoAvaliacaoRelatorio : avalia >
Relatorio "1" -- "0..1" HistoricoAvaliacaoRelatorio : possui >

Secretaria "1" -- "0..*" HistoricoAvaliacaoContrato : avalia >
Contrato "1" -- "0..1" HistoricoAvaliacaoContrato : possui >

@enduml
